2010-07-28    <d.scott@auckland.ac.nz>

	* specification of files for graphics units tests fixed

	* minor changes to Makefile to get it to clean backups from major
	directories


2010-05-11    <d.scott@auckland.ac.nz>

	* tsHessian added to calculate the approximate Hessian of a function

2010-03-10    <d.scott@auckland.ac.nz>

	* tailPlot, normTailPlotLine, tTailPlotLine, gammaTailPlotLine
	added to allow shtTailPlotLine to be added to SkewHyperbolic to
	satisfy referee request.

2010-02-09   <d.scott@auckland.ac.nz>

	* added testing of distributions, unit tests for all
	functions. Initial version of DistributionUtils prepared.

2010-01-22    <d.scott@auckland.ac.nz>

	* inst created with test setup derived from that in gdata and
	Rmetrics packages. Some enhancements to allow for different levels
	of testing.
