@@ -1,4 +1,5 @@
 export(besselRatio)
+export(incompleteBesselK)
 export(distIneqMassart)
 export(integrateDens)
 export(inversionTestpq, inversionTestqp)
