@@ -1,3 +1,7 @@
+2010-08-06    <d.scott@auckland.ac.nz>
+
+	* incompleteBesselK added
+
 2010-07-28    <d.scott@auckland.ac.nz>
 
 	* specification of files for graphics units tests fixed
